--- a/pom.xml
+++ b/pom.xml
@@ -81,17 +81,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-            <version>1.19.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <!-- Needed to get output from testcontainers -->
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.36</version>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+            <version>6.0.10</version>
             <scope>test</scope>
         </dependency>
 
