--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>no.shhsoft</groupId>
     <artifactId>dirsearch</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.3</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>DirSearch - A Directory Search Tool.</description>
